--- a/web/Views/Nastavitve/Edit.cshtml
+++ b/web/Views/Nastavitve/Edit.cshtml
@@ -13,14 +13,10 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
-                <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsDarkMode" /> @Html.DisplayNameFor(model => model.IsDarkMode)
+                    <input class="form-check-input" asp-for="IsDarkMode" /> @Html.DisplayNameFor(model =>
+                    model.IsDarkMode)
                 </label>
             </div>
             <div class="form-group">
@@ -34,8 +30,3 @@
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
