--- a/web/wwwroot/css/site.css
+++ b/web/wwwroot/css/site.css
@@ -71,3 +71,58 @@ td>span {
 .down {
   color: #f03a47 !important;
 }
+
+.dropdown {
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.search-bar {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+
+.options-list {
+  max-width: 300px;
+  max-height: 200px;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background: #fff;
+  padding: 5px;
+  display: none;
+  position: absolute;
+  z-index: 1000;
+  width: 100%;
+}
+
+.options-list.active {
+  display: block;
+}
+
+.option {
+  padding: 8px;
+  cursor: pointer;
+  border-radius: 3px;
+}
+
+.option:hover {
+  background: #f0f0f0;
+}
+
+#watchlist-asset-adder {
+  background-color: #258cfb;
+  color: white;
+  border-radius: 20px;
+  width: 128px;
+  height: auto;
+  padding: 5px;
+  margin-left: 25px;
+}
